--- a/app/views/boards/index.html.erb
+++ b/app/views/boards/index.html.erb
@@ -2,11 +2,11 @@
 
 <table>
   <tr>
-    <th>User_Id</th>
+    <th>User_Name</th>
     <th>Title</th>
     <th>Comment</th>
     <th>D date</th>
-    <th>D time</th>
+    <!--<th>D time</th>-->
     <th></th>
     <th></th>
     <th></th>
@@ -14,8 +14,8 @@
 
 <% @boards.each do |board| %>
   <tr>
-    <td><%# board.id %></td>
-    <td><%= board.user_id %></td>
+    <td><%= link_to board.id, {:controller => "users", :action => "show", :id => board.id, :name => "test"} %></td>
+    <td><a href=<%= url_for :controller => "users", :action => "show", :id => board.id %>>aaaa</a>
     <td><%= board.title %></td>
     <td><%= board.comment %></td>
     <td><%= board.d_date %></td>
@@ -23,6 +23,12 @@
     <td><%= link_to 'Show', board %></td>
     <td><%= link_to 'Edit', edit_board_path(board) %></td>
     <td><%= link_to 'Destroy', board, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <!--
+    <td><%# board.id %></td>
+    <td><%# board.user_id %></td>
+    <td><%# url_for :controller => "users", :action => "show", :id => board.id %></td>
+    <td><%# link_to @user.id.to_s(), {:controller => "users", :action => "show", :id => board.id, :name => "test"} %></td>
+    -->
   </tr>
 <% end %>
 </table>
@@ -43,5 +49,23 @@
     <br/>
   </div>
 <% end -%>
+
+<table>
+  <tr>
+    <th>User_Id</th>
+    <th>Name</th>
+    <th>Description</th>
+  </tr>
+<% @users.each do |user| %>
+  <tr>
+    atd><%= user.user_id %></td>
+    <td><%= user.name %></td>
+    <td><%= user.description %></td>
+    <td><%= link_to 'Show', user %></td>
+    <td><%= link_to 'Edit', edit_board_path(user) %></td>
+    <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+  </tr>
+<% end %>
+</table>
 
 <%= link_to 'New Board', new_board_path %>
