--- a/app/assets/stylesheets/boards.css.scss
+++ b/app/assets/stylesheets/boards.css.scss
@@ -15,3 +15,23 @@
 .user_text {
   margin-bottom: 10px;
 }
+
+.clearfix:after {
+  content: "";
+  display: block;
+  visibility: hidden;
+  clear: both;
+  height: 0;
+}
+
+.line_title {
+  float: left;
+  font-weight: bold;
+  font-size: 10pt;
+  margin-right: 20px;
+}
+
+.line_contents {
+  float: left;
+  font-size: 10pt;
+}
