--- a/app/views/boards/index.html.erb
+++ b/app/views/boards/index.html.erb
@@ -1,19 +1,46 @@
-<h1>Listing boards</h1>
-
-<table>
-  <tr>
-    <th>User_Name</th>
-    <th>Title</th>
-    <th>Comment</th>
-    <th>D date</th>
-    <!--<th>D time</th>-->
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
+<h1>簡易掲示板システム</h1>
 
 <% @boards.each do |board| %>
-  <tr>
+  <div class="clearfix">
+    <div class="line_title">投稿タイトル</div>
+    <div class="line_contents">
+      <%= board.title %>
+    </div>
+  </div>
+  
+  <div class="clearfix">
+    <div class="line_title">ユーザー名</div>
+    <div class="line_contents">
+            <%#= @a = @users.first %>
+            <% @c = @users.select {|user| user.id == board.user_id } %>
+            <%= link_to @c[0].name, {:controller => "users", :action => "show", :id => board.user_id } %>
+            <%#= @users.class.name %>
+            <%#= @b = User.find(2) %>
+            <%#= @b.name %>
+            <br>
+            <%#= @a = @users.assoc(board.user_id) %>
+            <%#= link_to @users.select {}find( {:controller => "users", :action => "show", :id => board.id, :name => "test"} %>
+    </div>
+  </div>
+
+  <div class="clearfix">
+    <div class="line_title">投稿日時</div>
+    <div class="line_contents">
+      <%= board.d_date %> <%= board.d_time %>
+    </div>
+  </div>
+
+  <div class="clearfix">
+      <%= board.comment %>
+  </div>
+
+  <%= link_to 'Show', board %>
+  <%= link_to 'Edit', edit_board_path(board) %>
+  <%= link_to 'Destroy', board, method: :delete, data: { confirm: 'Are you sure?' } %>
+
+  <div style="margin-bottom: 20px"></div>
+
+    <!--
     <td><%= link_to board.id, {:controller => "users", :action => "show", :id => board.id, :name => "test"} %></td>
     <td><a href=<%= url_for :controller => "users", :action => "show", :id => board.id %>>aaaa</a>
     <td><%= board.title %></td>
@@ -23,32 +50,35 @@
     <td><%= link_to 'Show', board %></td>
     <td><%= link_to 'Edit', edit_board_path(board) %></td>
     <td><%= link_to 'Destroy', board, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    -->
     <!--
     <td><%# board.id %></td>
     <td><%# board.user_id %></td>
     <td><%# url_for :controller => "users", :action => "show", :id => board.id %></td>
     <td><%# link_to @user.id.to_s(), {:controller => "users", :action => "show", :id => board.id, :name => "test"} %></td>
     -->
-  </tr>
 <% end %>
-</table>
 
+<hr>
 <br />
 
 <%= form_tag(:controller=>"boards", :action=>"create") do -%>
   <div class="user_wrapper">
-    <h2>ユーザーID</h2>
-    <%= text_field(:contribute, :user_id, :class=>"user_text", :size=>"60") %>
-    <h2>投稿タイトル</h2>
+    <h3>ユーザー</h3>
+    <%= text_field(:contribute, :user, :class=>"user_text", :size=>"60") %>
+    <h3>投稿タイトル</h3>
     <%= text_field(:contribute, :title, :class=>"user_text", :size=>"60") %>
     <br/>
-    <h2>投稿内容</h2>
+    <h3>投稿内容</h3>
     <%= text_area(:contribute, :comment, :class=>"user_area", :size=>"60x20") %>
     <br/>
     <%= submit_tag("送信", :confirm=>"Are you sure?", :size=>"50") %>
     <br/>
   </div>
 <% end -%>
+
+<br>
+<br>
 
 <table>
   <tr>
@@ -58,7 +88,7 @@
   </tr>
 <% @users.each do |user| %>
   <tr>
-    atd><%= user.user_id %></td>
+    <td><%= user.user_id %></td>
     <td><%= user.name %></td>
     <td><%= user.description %></td>
     <td><%= link_to 'Show', user %></td>
