--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -13,7 +13,7 @@
 
 <% @users.each do |user| %>
   <tr>
-    <td><%= user.user_id %></td>
+    <td><%= user.id %></td>
     <td><%= user.name %></td>
     <td><%= user.description %></td>
     <td><%= user.profile_img %></td>
